trying to fix flicker

--- a/portfolio.css
+++ b/portfolio.css
@@ -18,7 +18,8 @@
 body {
   position: relative;
   font-family: "Gabarito", cursive;
-  background: url(images/starry-sky.jpg) no-repeat center center fixed;
+  background: var(--primary-color) url(images/starry-sky.jpg) no-repeat center
+    center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
